--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^5.8.0",
     "@types/react-native-snap-carousel": "^3.8.2",
     "react-native": "0.63.3",
+    "react-native-image-picker": "^2.3.4",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.12.0",
     "react-native-snap-carousel": "^3.9.1",
