--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-screens": "^2.12.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-swiper": "^1.6.0",
+    "react-native-switch-selector": "^2.0.6",
     "react-native-vector-icons": "^7.1.0"
   },
   "devDependencies": {
