--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@react-navigation/bottom-tabs": "^5.10.0",
     "@react-navigation/native": "^5.8.0",
     "@types/react-native-snap-carousel": "^3.8.2",
+    "axios": "^0.21.0",
     "react-native": "0.63.3",
+    "react-native-image-crop-picker": "^0.35.2",
     "react-native-image-picker": "^2.3.4",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.12.0",
